Arreglar problemas en creacion de pacientes